# sgd

./: .gitignore  Cargo.toml  EDGE.md  LICENSE  README.md  install
src/: .linux  .setalias  d.rs  g.rs  install.c  install.rs  install.sh  main.rs  saved_locations.txt  sgd_location.txt
src/.saved/: test2
